--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@element-plus/icons": "^0.0.11",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.3.0",
+        "@types/dom-webcodecs": "^0.1.7",
         "@types/gulp": "^4.0.9",
         "@types/gulp-bump": "^2.8.2",
         "@types/gulp-json-editor": "^2.2.33",
@@ -60,6 +61,7 @@
         "@vue/cli-service": "^4.5.15",
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^8.0.0",
+        "@webgpu/types": "^0.1.32",
         "axios": "^0.24.0",
         "css-vars-ponyfill": "^2.4.7",
         "element-plus": "^1.2.0-beta.1",
